# livekittesting

./: .gitignore  Instructionsforsoham.md  agent.py  main.py  pyproject.toml
weruntesting/: call_test.py  config.py  dispatch-rule.json  install.py  interview_agent.py  setup_test.py  test_config.py  test_vad_fix.py  twilio_setup.py
